src/style/partials/_forms.scss
form {
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	margin-top: 30px;
	width: 100%;
}

label {
	color: $shine-brand-blue;
	font-size: 14px;
	display: flex;
	height: auto;
	flex-flow: column nowrap;
	cursor: pointer;
	max-width: 400px;
	width: 95%;
	input, select {
		height: 50px;
		max-width: 400px;
		border-radius: $border-radius;
		font-size: 16px;
		border: none;
		margin-top: 5px;
		background-color: #fff;
		text-indent: 15px;
		color: $shine-light-gray;
		& ~ .success-validation-check {
			background-image: url('/assets/check.svg');
			background-repeat: no-repeat;
			position: relative;
			width: 17px;
			height: 15px;
			bottom: 56px;
			left: 375px;
			z-index: 100;
		}
		& ~ span {
			opacity: 0;
			display: none;
			color: $shine-dark-orange;
			font-size: 14px;
			margin-top: 3px;
			transition: all .1s;
			cursor: auto; 
		}
		&::placeholder { color: #d3d8dc; text-indent: 15px; font-size: 16px;}
		&::-webkit-input-placeholder { color: #d3d8dc; text-indent: 15px; font-size: 16px; }
		&:-ms-input-placeholder { color: #d3d8dc; text-indent: 15px; font-size: 16px; }
		&::-ms-input-placeholder { color: #d3d8dc; text-indent: 15px; font-size: 16px; }
		&.blurred:invalid {
			box-shadow: 0 2px 0 0 $shine-dark-orange;
			& ~ span:not(.success-validation-check) {
				display: inline-block;
				opacity: 1;
				margin-bottom: 5px;
			}
		}
		&.blurred:valid {
			& ~ .success-validation-check {
				display: inline-block;
				opacity: 1;
			}
		}
		&:focus {
			&::placeholder { color: transparent; }
			&::-webkit-input-placeholder { color: transparent; }
			&:-ms-input-placeholder { color: transparent; }
			&::-ms-input-placeholder { color: transparent; }			
		}
	}
}

form button {
	width: 95%;
	max-width: 400px;
	height: 50px;
	border-radius: $border-radius;
	font-size: 18px;
	background-color: $shine-orange;
	color: white;
	border: none;
	box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.15);
	margin-top: 23px;
	cursor: pointer;
	transition: .1s all;
	&:hover { background-color: $shine-light-orange; }
	&:active {
		box-shadow: none;
		height: 48px;
		margin-top: 25px;
		background-color: $shine-light-orange;
	}
}

select {
	cursor: pointer;
	&:invalid {
		color: #d3d8dc;
	}
}

#formErrorContainer {
	color: $shine-dark-orange;
	max-width: 400px;
	width: 95%;
	margin: 10px 0;
	&:empty {
		display: none;
	}
}

.login-loader {
	height: 50px;
	margin-top: 23px;
}

.change-input-field-link {
	color: $shine-blue;
}

